--- a/plugins/Math_operations/Math_operations.ui
+++ b/plugins/Math_operations/Math_operations.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>235</width>
-    <height>302</height>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -224,7 +224,7 @@
          </item>
          <item>
           <property name="text">
-           <string>Plasma lambda[nm]</string>
+           <string>Plasma lambda[m]</string>
           </property>
          </item>
          <item>
