--- a/plugins/Interferometry/Interferometry1.ui
+++ b/plugins/Interferometry/Interferometry1.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>251</width>
-    <height>84</height>
+    <width>201</width>
+    <height>101</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0" columnstretch="1,0,0,0">
+  <layout class="QGridLayout" name="gridLayout" rowstretch="0,0,0,0" columnstretch="1,0,1,0">
    <property name="leftMargin">
     <number>0</number>
    </property>
@@ -29,6 +29,51 @@
    <property name="spacing">
     <number>2</number>
    </property>
+   <item row="2" column="3">
+    <widget class="QSpinBox" name="numAngle">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="minimum">
+      <number>0</number>
+     </property>
+     <property name="maximum">
+      <number>999</number>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
+    <widget class="QDoubleSpinBox" name="maxAngle">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="suffix">
+      <string>˚</string>
+     </property>
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="minimum">
+      <double>-360.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>360.000000000000000</double>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0" colspan="4">
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -62,7 +107,7 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+         <iconset resource="Interferometry.qrc">
           <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
         </property>
        </widget>
@@ -70,60 +115,27 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="3">
-    <widget class="QSpinBox" name="numAngle">
+   <item row="1" column="0">
+    <widget class="QDoubleSpinBox" name="minStretch">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
-     </property>
-     <property name="minimum">
-      <number>0</number>
-     </property>
-     <property name="maximum">
-      <number>999</number>
-     </property>
-     <property name="value">
-      <number>0</number>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QLabel" name="label_2">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string>:</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="2">
-    <widget class="QDoubleSpinBox" name="maxAngle">
-     <property name="font">
-      <font>
-       <pointsize>10</pointsize>
-      </font>
-     </property>
-     <property name="suffix">
-      <string>˚</string>
      </property>
      <property name="decimals">
       <number>3</number>
      </property>
      <property name="minimum">
-      <double>-360.000000000000000</double>
+      <double>0.000000000000000</double>
      </property>
      <property name="maximum">
-      <double>360.000000000000000</double>
+      <double>9999.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.100000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
      </property>
      <property name="neutrinoSave" stdset="0">
       <bool>true</bool>
@@ -145,6 +157,30 @@
      </property>
      <property name="value">
       <number>0</number>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
+    <widget class="QDoubleSpinBox" name="minAngle">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="suffix">
+      <string>˚</string>
+     </property>
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="minimum">
+      <double>-360.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>360.000000000000000</double>
      </property>
      <property name="neutrinoSave" stdset="0">
       <bool>true</bool>
@@ -178,27 +214,18 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
-    <widget class="QDoubleSpinBox" name="minAngle">
+   <item row="2" column="1">
+    <widget class="QLabel" name="label_2">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
       </font>
      </property>
-     <property name="suffix">
-      <string>˚</string>
+     <property name="text">
+      <string>:</string>
      </property>
-     <property name="decimals">
-      <number>3</number>
-     </property>
-     <property name="minimum">
-      <double>-360.000000000000000</double>
-     </property>
-     <property name="maximum">
-      <double>360.000000000000000</double>
-     </property>
-     <property name="neutrinoSave" stdset="0">
-      <bool>true</bool>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
@@ -217,8 +244,8 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QDoubleSpinBox" name="minStretch">
+   <item row="3" column="0">
+    <widget class="QDoubleSpinBox" name="minThick">
      <property name="font">
       <font>
        <pointsize>10</pointsize>
@@ -244,6 +271,69 @@
      </property>
     </widget>
    </item>
+   <item row="3" column="2">
+    <widget class="QDoubleSpinBox" name="maxThick">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="decimals">
+      <number>3</number>
+     </property>
+     <property name="minimum">
+      <double>0.000000000000000</double>
+     </property>
+     <property name="maximum">
+      <double>9999.000000000000000</double>
+     </property>
+     <property name="singleStep">
+      <double>0.100000000000000</double>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="3">
+    <widget class="QSpinBox" name="numThick">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="minimum">
+      <number>0</number>
+     </property>
+     <property name="maximum">
+      <number>999</number>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+     <property name="neutrinoSave" stdset="0">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLabel" name="label_3">
+     <property name="font">
+      <font>
+       <pointsize>10</pointsize>
+      </font>
+     </property>
+     <property name="text">
+      <string>:</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
@@ -256,7 +346,7 @@
   <tabstop>numAngle</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
+  <include location="Interferometry.qrc"/>
  </resources>
  <connections/>
 </ui>
