--- a/plugins/Cutoff_mask/Cutoff_mask.ui
+++ b/plugins/Cutoff_mask/Cutoff_mask.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>296</width>
-    <height>222</height>
+    <height>229</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -57,7 +57,7 @@
        <property name="verticalSpacing">
         <number>2</number>
        </property>
-       <item row="1" column="1" colspan="2">
+       <item row="1" column="1" colspan="3">
         <widget class="QSlider" name="slider">
          <property name="font">
           <font>
@@ -81,7 +81,7 @@
          </property>
         </widget>
        </item>
-       <item row="2" column="2">
+       <item row="2" column="3">
         <widget class="QPushButton" name="doIt">
          <property name="font">
           <font>
@@ -93,7 +93,7 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="1" colspan="2">
+       <item row="3" column="1" colspan="3">
         <widget class="QComboBox" name="replaceVal">
          <property name="font">
           <font>
@@ -128,6 +128,21 @@
            <string>Mean</string>
           </property>
          </item>
+        </widget>
+       </item>
+       <item row="2" column="2">
+        <widget class="QCheckBox" name="opposite">
+         <property name="font">
+          <font>
+           <pointsize>10</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>inv.</string>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
