fix bug when deleting quicly nphys

--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -125,6 +125,7 @@
      <addaction name="actionPrev_Buffer"/>
      <addaction name="actionNext_Buffer"/>
      <addaction name="actionClose_Buffer"/>
+     <addaction name="actionClose_All_Buffers"/>
      <addaction name="separator"/>
     </widget>
     <widget class="QMenu" name="menuColortable">
@@ -563,7 +564,7 @@
   </action>
   <action name="actionPoint">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Qt_5_12_2_5_12_2-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
    </property>
    <property name="text">
@@ -583,7 +584,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Qt_5_12_2_5_12_2-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -596,7 +597,7 @@
   </action>
   <action name="actionPlugin">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Qt_5_12_2_5_12_2-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/plugin.png</normaloff>:/icons/plugin.png</iconset>
    </property>
    <property name="text">
@@ -618,7 +619,7 @@
   </action>
   <action name="actionTranspose">
    <property name="icon">
-    <iconset resource="../../build-neutrinoMaster-Qt_5_12_2_5_12_2-Default/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
    </property>
    <property name="text">
@@ -727,6 +728,14 @@
     <string>Ctrl+L</string>
    </property>
   </action>
+  <action name="actionClose_All_Buffers">
+   <property name="text">
+    <string>Close All Buffers</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+D</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -736,7 +745,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../build-neutrinoMaster-Qt_5_12_2_5_12_2-Default/src/qrc/icons.qrc"/>
+  <include location="../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
