--- a/plugins/Image_list/Image_list.ui
+++ b/plugins/Image_list/Image_list.ui
@@ -46,6 +46,12 @@
         <pointsize>10</pointsize>
        </font>
       </property>
+      <property name="toolTip">
+       <string>File from which image was open</string>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
     <item row="0" column="0">
@@ -110,16 +116,13 @@
        <bool>true</bool>
       </property>
       <property name="expandsOnDoubleClick">
-       <bool>false</bool>
+       <bool>true</bool>
       </property>
       <property name="columnCount">
        <number>4</number>
       </property>
-      <attribute name="headerDefaultSectionSize">
-       <number>45</number>
-      </attribute>
       <attribute name="headerShowSortIndicator" stdset="0">
-       <bool>false</bool>
+       <bool>true</bool>
       </attribute>
       <column>
        <property name="text">
