check previous fix and cleanup

--- a/plugins/Image_list/Image_list.ui
+++ b/plugins/Image_list/Image_list.ui
@@ -281,7 +281,7 @@
     <string>Rescale</string>
    </property>
    <property name="toolTip">
-    <string>Change scale</string>
+    <string>Change image size</string>
    </property>
   </action>
  </widget>
