--- a/plugins/Image_list/Image_list.ui
+++ b/plugins/Image_list/Image_list.ui
@@ -119,11 +119,16 @@
        <bool>true</bool>
       </property>
       <property name="columnCount">
-       <number>4</number>
+       <number>5</number>
       </property>
       <attribute name="headerShowSortIndicator" stdset="0">
        <bool>true</bool>
       </attribute>
+      <column>
+       <property name="text">
+        <string>#</string>
+       </property>
+      </column>
       <column>
        <property name="text">
         <string>Short</string>
@@ -261,7 +266,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset>
+    <iconset resource="../../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -274,7 +279,7 @@
   </action>
   <action name="actionRescale">
    <property name="icon">
-    <iconset>
+    <iconset resource="../../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/rescale.png</normaloff>:/icons/rescale.png</iconset>
    </property>
    <property name="text">
@@ -292,6 +297,8 @@
    <header location="global">nTreeWidget.h</header>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="../../../build-neutrinoMaster-brew_kit-Debug/src/qrc/icons.qrc"/>
+ </resources>
  <connections/>
 </ui>
